Source/ThirdParty/ANGLE/include/platform/FeaturesMtl.h
@@ -130,6 +130,10 @@ struct FeaturesMtl : FeatureSetBase
             "intel_explicit_bool_cast_workaround", FeatureCategory::MetalWorkarounds,
             "Insert explicit casts for float/double/unsigned/signed int on macOS 10.15 with Intel driver",
             &members};
+    Feature intelDisableFastMath = {
+            "intel_disable_fast_math", FeatureCategory::MetalWorkarounds,
+            "Disable fast math in atan and invariance cases when running below macOS 12.0",
+            &members};
 };
 
 }  // namespace angle
